# MafiaFormats.lib

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  formats.hpp
src/mfformat/: base_loader.cpp  base_loader.hpp  base_parser.hpp  loader_cache.hpp
src/mfformat/4ds/: parser_4ds.cpp  parser_4ds.hpp
src/mfformat/5ds/: parser_5ds.cpp  parser_5ds.hpp
src/mfformat/6ds/: parser_6ds.cpp  parser_6ds.hpp
src/mfformat/cache_bin/: parser_cachebin.cpp  parser_cachebin.hpp
src/mfformat/check_bin/: parser_checkbin.cpp  parser_checkbin.hpp
src/mfformat/dta/: key_extractor.cpp  key_extractor.hpp  parser_dta.cpp  parser_dta.hpp
src/mfformat/effects/: parser_effects_bin.cpp  parser_effects_bin.hpp
src/mfformat/klz/: parser_klz.cpp  parser_klz.hpp
src/mfformat/load_def/: parser_loaddef.cpp  parser_loaddef.hpp
src/mfformat/mnu/: parser_mnu.cpp  parser_mnu.hpp
src/mfformat/road_bin/: parser_roadbin.cpp  parser_roadbin.hpp
src/mfformat/scene2_bin/: parser_scene2bin.cpp  parser_scene2bin.hpp
src/mfformat/textdb/: parser_textdbdef.cpp  parser_textdbdef.hpp
src/mfformat/utils/: bmp_analyser.cpp  bmp_analyser.hpp  logger.cpp  logger.hpp  math.hpp  openmf.cpp  openmf.hpp  os_defines.hpp  osg.cpp  osg.hpp
src/mfformat/vfs/: vfs.cpp  vfs.hpp
